--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link href="css/kommandoranStyles.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -26,7 +27,7 @@
 
                     <li>
                         <p class="navbar-btn">
-                            <input type="checkbox" id="toggleSwitch">
+                            <input type="checkbox" id="toggleSwitch" checked="checked">
                         </p>
                     </li>
                 </ul>
@@ -38,7 +39,14 @@
 
         <div class="row">
             <div class="col-xs-12">
-                <object data="images/PowerSwitchesMap.svg"></object>
+                <div class="svg-container">
+                    <object data="images/PowerSwitchesMap.svg" width="100%" height="100%"></object>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <button type="button" class="btn btn-default" id="switchOfGroupForNight">Släck för natten</button>
             </div>
         </div>
     </div>
