--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -23,16 +23,26 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand">
-                    <p>Kommandoran™ - prototype</p>
+                    Kommandoran™
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <p class="navbar-btn">
-                        </p>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <img style="display: inline;" src="images/technology/remote-control_32x32px.png" /> Hemsamariten
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>Tellstick Scheduler</li>
+                            <li><a href="http://10.0.0.2:8525/HemsamaritenWCFService/StartTellstickScheduler"><img style="display: inline;" src="images/audio-and-video-controls/play-button_32x32px.png" /> Start</a></li>
+                            <li><a href="http://10.0.0.2:8525/HemsamaritenWCFService/StopTellstickScheduler"><img style="display: inline;" src="images/audio-and-video-controls/stop_32x32px.png" /> Stop</a></li>
+                            <li role="separator" class="divider"></li>
+                        </ul>
                     </li>
+
+                    
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
