--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -36,8 +36,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>Tellstick Scheduler</li>
-                            <li><a href="javascript:StartTellstickScheduler"><img style="display: inline;" src="images/audio-and-video-controls/play-button_32x32px.png" /> Start</a></li>
-                            <li><a href="javascript:StopTellstickScheduler"><img style="display: inline;" src="images/audio-and-video-controls/stop_32x32px.png" /> Stop</a></li>
+                            <li><a href="javascript:StartTellstickScheduler()"><img style="display: inline;" src="images/audio-and-video-controls/play-button_32x32px.png" /> Start</a></li>
+                            <li><a href="javascript:StopTellstickScheduler()"><img style="display: inline;" src="images/audio-and-video-controls/stop_32x32px.png" /> Stop</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
