Added icon to browsertab

--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <base href="/">
     <title>Kommandoran™</title>
+    <link rel="icon" href="images/technology/remote-control_32x32px.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <link href="css/kommandoranStyles.css" rel="stylesheet" />
@@ -31,7 +32,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <img style="display: inline;" src="images/technology/remote-control_32x32px.png" /> Hemsamariten
+                            Hemsamariten
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
