Added a macro to viso file which also exports an -svg file while (when) saving the main file

--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="svg-container">
-                        <object data="images/PowerSwitchesMap.svg"></object>
+                        <object data="images/DevicesMap.svg"></object>
                     </div>
                 </div>
             </div>
