--- a/TestProjectHtml/surveillanceCameraModal.html
+++ b/TestProjectHtml/surveillanceCameraModal.html
@@ -17,16 +17,16 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-2">
-                        <button type="button" id="icoAudio" class="btn btn-default"><img class="img-responsive" src="images/audio-and-video-controls/speaker32x32.png"></button>
+                        <button type="button" id="icoAudio" class="btn btn-default btn-xs"><img class="img-responsive" src="images/audio-and-video-controls/speaker32x32.png"></button>
                     </div>
                     <div class="col-xs-2">
-                        <a id="icoSnapshot" class="btn btn-default"><img class="img-responsive" src="images/technology/photo-camera32x32.png"></a>
+                        <a id="icoSnapshot" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/photo-camera32x32.png"></a>
                     </div>
                     <div class="col-xs-2">
-                        <button type="button" id="icoLEDFlashlight" class="btn btn-default"><img class="img-responsive" src="images/technology/camera-flash32x32.png"></button>
+                        <button type="button" id="icoLEDFlashlight" class="btn btn-defaul btn-xs"><img class="img-responsive" src="images/technology/camera-flash32x32.png"></button>
                     </div>
                     <div class="col-xs-2">
-                        <button type="button" id="icoClosestTellstickDevice" class="btn btn-default"><img class="img-responsive" src="images/technology/light-bulb-off32x32.png"></button>
+                        <button type="button" id="icoClosestTellstickDevice" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/light-bulb-off32x32.png"></button>
                     </div>
                 </div>
             </div>
