--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="/">
     <title>Kommandoran™</title>
     <link rel="icon" href="images/technology/remote-control_32x32px.png" />
@@ -68,8 +68,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="clearfix">
-                    <button type="button" class="btn btn-lg btn-danger" id="switchOnAll">Tänd allt!</button>
-                    <button type="button" class="btn btn-lg btn-default" id="switchOfGroupForNight">Natt</button>
+                    <button type="button" class="btn btn-danger btn-sm" id="switchOnAll">Tänd allt!</button>
+                    <button type="button" class="btn btn-sm" id="alarm"></button>
+                    <button type="button" class="btn btn-default btn-sm" id="switchOfGroupForNight">Natt</button>
 
                     <div class="pull-right">
                         <input type="checkbox" id="toggleSwitch" checked="checked">
