--- a/TestProjectHtml/surveillanceCameraModal.html
+++ b/TestProjectHtml/surveillanceCameraModal.html
@@ -16,17 +16,29 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-2">
-                        <button type="button" id="icoAudio" class="btn btn-default btn-xs"><img class="img-responsive" src="images/audio-and-video-controls/speaker32x32.png"></button>
+                    <div class="col-xs-12"><p id="detectionComment">&nbsp;</p></div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button type="button" id="icoAudio" class="btn btn-default btn-xs"><img class="img-responsive" src="images/audio-and-video-controls/speaker32x32.png"></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <a id="icoSnapshot" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/photo-camera32x32.png"></a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xs-2">
-                        <a id="icoSnapshot" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/photo-camera32x32.png"></a>
-                    </div>
-                    <div class="col-xs-2">
-                        <button type="button" id="icoLEDFlashlight" class="btn btn-defaul btn-xs"><img class="img-responsive" src="images/technology/camera-flash32x32.png"></button>
-                    </div>
-                    <div class="col-xs-2">
-                        <button type="button" id="icoClosestTellstickDevice" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/light-bulb-off32x32.png"></button>
+                    <div class="col-xs-4"></div>
+                    <div class="col-xs-4">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button type="button" id="icoLEDFlashlight" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/camera-flash32x32.png"></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" id="icoClosestTellstickDevice" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/light-bulb-off32x32.png"></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
