--- a/TestProjectHtml/surveillanceCameraModal.html
+++ b/TestProjectHtml/surveillanceCameraModal.html
@@ -19,31 +19,31 @@
                     <div class="col-xs-12"><p id="detectionComment">&nbsp;</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-5">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
-                                <button type="button" id="icoAudio" class="btn btn-default btn-xs"><img class="img-responsive" src="images/audio-and-video-controls/speaker32x32.png"></button>
+                                <button type="button" id="icoAudio" class="btn btn-default btn-xs disabled"><i class="fa fa-lg fa-volume-up"></i>  Ljud</button>
                             </div>
                             <div class="btn-group" role="group">
-                                <a id="icoSnapshot" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/photo-camera32x32.png"></a>
+                                <a id="icoSnapshot" class="btn btn-default btn-xs"><i class="fa fa-lg fa-camera"></i>  Fotografera</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-4"></div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-2"></div>
+                    <div class="col-xs-5">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
-                                <button type="button" id="icoLEDFlashlight" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/camera-flash32x32.png"></button>
+                                <button type="button" id="icoLEDFlashlight" class="btn btn-default btn-xs"><i class="fa fa-lg fa-flash"></i>  Kamerablixt</button>
                             </div>
                             <div class="btn-group" role="group">
-                                <button type="button" id="icoClosestTellstickDevice" class="btn btn-default btn-xs"><img class="img-responsive" src="images/technology/light-bulb-off32x32.png"></button>
+                                <button type="button" id="icoClosestTellstickDevice" class="btn btn-default btn-xs"><i class="fa fa-lg fa-lightbulb-o"></i>  Tänd/Släck</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Stäng</button>
             </div>
         </div>
 
