--- a/TestProjectHtml/surveillanceCameraModal.html
+++ b/TestProjectHtml/surveillanceCameraModal.html
@@ -18,19 +18,11 @@
                 <div class="row">
                     <div class="col-xs-12"><p id="detectionComment">&nbsp;</p></div>
                 </div>
+
+
                 <div class="row">
-                    <div class="col-xs-5">
-                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                            <div class="btn-group" role="group">
-                                <button type="button" id="icoAudio" class="btn btn-default btn-xs disabled"><i class="fa fa-lg fa-volume-up"></i>  Ljud</button>
-                            </div>
-                            <div class="btn-group" role="group">
-                                <a id="icoSnapshot" class="btn btn-default btn-xs"><i class="fa fa-lg fa-camera"></i>  Fotografera</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-2"></div>
-                    <div class="col-xs-5">
+
+                    <div class="col-sm-6 col-sm-push-6">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
                                 <button type="button" id="icoLEDFlashlight" class="btn btn-default btn-xs"><i class="fa fa-lg fa-flash"></i>  Kamerablixt</button>
@@ -40,7 +32,20 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-6 col-sm-pull-6">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button type="button" id="icoAudio" class="btn btn-default btn-xs disabled"><i class="fa fa-lg fa-volume-up"></i>  Ljud</button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <a id="icoSnapshot" class="btn btn-default btn-xs"><i class="fa fa-lg fa-camera"></i>  Fotografera</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Stäng</button>
