Added shortcut to another homepage

--- a/TestProjectHtml/index.html
+++ b/TestProjectHtml/index.html
@@ -41,6 +41,7 @@
                             <li><a href="javascript:StartTellstickScheduler()"><img style="display: inline;" src="images/audio-and-video-controls/play-button_32x32px.png" /> Start</a></li>
                             <li><a href="javascript:StopTellstickScheduler()"><img style="display: inline;" src="images/audio-and-video-controls/stop_32x32px.png" /> Stop</a></li>
                             <li role="separator" class="divider"></li>
+                            <li><a href="https://sites.google.com/site/sjostorpsvagen3a/"><img style="display: inline;" src="images/home_32x32.png" />Sjöstorpsvägen 3A</a></li>
                         </ul>
                     </li>
 
